# VinPRO

./: .gitignore  .gitmodules  README.md
.claude/: settings.local.json
Control_Planning_Robot/src/vinpro_arduino/config/: scissors_hw.yaml
Control_Planning_Robot/src/vinpro_arduino/src/: scissors_controller.cpp
Control_Planning_Robot/src/vinpro_bringup/: CMakeLists.txt  package.xml
Control_Planning_Robot/src/vinpro_bringup/launch/: hardware.launch.py
Control_Planning_Robot/src/vinpro_camera/: CMakeLists.txt
Control_Planning_Robot/src/vinpro_camera/include/vinpro_camera/: camera_subscriber_node.hpp
Control_Planning_Robot/src/vinpro_description/: CMakeLists.txt  package.xml
Control_Planning_Robot/src/vinpro_mtc/: package.xml
Control_Planning_Robot/src/vinpro_perception/config/: perception_params.yaml
Control_Planning_Robot/src/vinpro_perception/vinpro_perception/: inference_node.py
Control_Planning_Robot/src/vinpro_transform/: CMakeLists.txt  package.xml
Grapevine_paper/: GrapevineDemo.ipynb
Stacked-Hourglass-Network/: .gitignore  README.md  requirements.txt  train.py
Stacked-Hourglass-Network/notebooks/: vinnet2.ipynb
Stacked-Hourglass-Network/outputs/: graph.adjlist  tree_structure_3.adjlist  tree_structure_4.adjlist  tree_structure_5.adjlist  tree_structure_8.adjlist
Stacked-Hourglass-Network/vinet/: __init__.py  config.py
Stacked-Hourglass-Network/vinet/data/: transforms.py
Stacked-Hourglass-Network/vinet/inference/: visualization.py
VinNET_paper/: ViNet_demo.ipynb  data  vinnet-paper-replica.ipynb
vinpro-project-repo/: .gitignore  README.md  evaluate.py  pyproject.toml  train.py
vinpro-project-repo/notebooks/: output.ipynb  output2.ipynb
vinpro-project-repo/outputs/: tree_structure.adjlist  tree_structure_0.adjlist  tree_structure_1.adjlist  tree_structure_9.adjlist
vinpro-project-repo/scripts/: download_dataset.sh
vinpro-project-repo/vinet/: config.py
vinpro-project-repo/vinet/data/: __init__.py  dataset.py  encoding.py
vinpro-project-repo/vinet/inference/: __init__.py  node_extraction.py
vinpro-project-repo/vinet/model/: __init__.py  hourglass.py  lightning_module.py
vinpro_ws/src/custom_msgs/: CMakeLists.txt
vinpro_ws/src/custom_msgs/msg/: PointsArray.msg
vinpro_ws/src/vinpro_arduino/: package.xml  vinpro_arduino_plugin.xml
vinpro_ws/src/vinpro_arduino/include/vinpro_arduino/: scissors_controller.hpp
vinpro_ws/src/vinpro_bringup/launch/: full_system.launch.py  sim_only.launch.py
vinpro_ws/src/vinpro_camera/: package.xml
vinpro_ws/src/vinpro_description/config/: controllers.yaml  kinematics.yaml
vinpro_ws/src/vinpro_description/urdf/: vinpro_eef.urdf.xacro
vinpro_ws/src/vinpro_mtc/: CMakeLists.txt
vinpro_ws/src/vinpro_mtc/config/: mtc_params.yaml
vinpro_ws/src/vinpro_mtc/include/vinpro_mtc/: planning_task.hpp
vinpro_ws/src/vinpro_perception/vinpro_perception/: pruning_policy.py
vinpro_ws/src/vinpro_transform/include/vinpro_transform/: transform_node.hpp
vinpro_ws/src/vinpro_transform/src/: transform_main.cpp  transform_node.cpp
wp2-computer-vision/: README.md  evaluate.py  predict.py  pyproject.toml
wp2-computer-vision/notebooks/: final_result.ipynb  output1.ipynb  output3.ipynb
wp2-computer-vision/outputs/: tree_structure_2.adjlist  tree_structure_6.adjlist  tree_structure_7.adjlist
wp2-computer-vision/scripts/: download_dataset.sh
wp2-computer-vision/vinet/data/: dataset.py  encoding.py
wp2-computer-vision/vinet/inference/: association.py
wp3-control/src/custom_msgs/: package.xml
wp3-control/src/vinpro_arduino/: CMakeLists.txt
wp3-control/src/vinpro_bringup/config/: static_transforms.yaml
wp3-control/src/vinpro_camera/src/: camera_subscriber_main.cpp  camera_subscriber_node.cpp
wp3-control/src/vinpro_mtc/src/: planning_task.cpp
wp3-control/src/vinpro_perception/: package.xml  setup.py
wp3-control/src/vinpro_perception/launch/: perception.launch.py
wp3-control/src/vinpro_perception/vinpro_perception/: inference_node.py
