[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinpro-project-repo"
version = "1.0.0"
description = "VinPRO WP2: Computer vision pipeline for grapevine structure estimation (based on ViNet)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VinPRO Team — Alta Scuola Politecnica"},
]
keywords = ["deep-learning", "grapevine", "pruning", "plant-structure", "precision-viticulture", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.7.0",
    "albumentations>=1.3.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]

[project.urls]
"Baseline Paper" = "https://doi.org/10.1016/j.compag.2023.107736"
Dataset = "https://doi.org/10.34777/azf6-tm83"
"Alta Scuola Politecnica" = "https://www.asp-poli.it/"
PIC4SeR = "https://pic4ser.polito.it/"

[tool.setuptools.packages.find]
include = ["vinet*"]
