<?xml version="1.0"?>
<package format="3">
  <name>vinpro_description</name>
  <version>0.1.0</version>
  <description>VinPRO URDF/xacro for the custom end-effector and MoveIt config</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
