<?xml version="1.0"?>
<package format="3">
  <name>vinpro_mtc</name>
  <version>0.1.0</version>
  <description>VinPRO MoveIt Task Constructor pipeline for the pruning arm motion</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
