<?xml version="1.0"?>
<package format="3">
  <name>vinpro_transform</name>
  <version>0.1.0</version>
  <description>VinPRO TF2 transform node: camera-frame points → base_link + MTC launcher</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>custom_msgs</depend>
  <depend>vinpro_mtc</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
