<?xml version="1.0"?>
<package format="3">
  <name>vinpro_arduino</name>
  <version>0.1.0</version>
  <description>VinPRO ros2_control hardware interface for the Arduino Nano electric shear</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
