<?xml version="1.0"?>
<package format="3">
  <name>vinpro_camera</name>
  <version>0.1.0</version>
  <description>VinPRO depth subscriber: pixel coords + depth → 3-D camera-frame points</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
