<?xml version="1.0"?>
<package format="3">
  <name>vinpro_perception</name>
  <version>0.1.0</version>
  <description>VinPRO WP2 bridge: ViNet inference + pruning policy → pixel cutting points</description>
  <maintainer email="vinpro@polito.it">VinPRO Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
